# loadbalancer

./: Cargo.toml  Readme.md
src/: app.rs  config.rs  error.rs  main.rs
src/algorithms/: least_connection.rs  location_based.rs  mod.rs  resource_based.rs  weighted_least_connection.rs  weighted_response_time.rs
src/db/: mod.rs  redis.rs
src/middleware/: mod.rs  server.rs
src/servers/: health.rs
src/services/: background_worker.rs  latency_tracker_worker.rs  mod.rs  server_status_worker.rs
