[package]
name = "load-balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6.20" }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors", "trace", "limit"] }

tracing = "0.1.41"
tracing-subscriber = "0.3"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

anyhow = "1.0.86"
dotenvy = "0.15.7"
envy = "0.4.2"

reqwest = "0.12.24"
